Added some of the fonts locally

--- a/site/about-me/index.html
+++ b/site/about-me/index.html
@@ -624,11 +624,7 @@ id="collection-5b92949c898583d1de84fb5a">
                             <div class="intrinsic">
 
                               <div class="image-inset content-fit" data-animation-tier="1" data-description="">
-                                <noscript><img src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536442012684-5YXHCNOQNKMBMXF3UDX1/ke17ZwdGBToddI8pDm48kGZsbMQorZLBvTsrYytc7qF7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0qqML2YsA4X4Bu62F5Escy-ebFkSk3GdcFVpBfDL4zgwQYGWHxsiBk8Z2WZNlx-X6A/me.png"
-                                  alt="Hello! I'm Shagun - " /></noscript>
-                                <img data-src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536442012684-5YXHCNOQNKMBMXF3UDX1/ke17ZwdGBToddI8pDm48kGZsbMQorZLBvTsrYytc7qF7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0qqML2YsA4X4Bu62F5Escy-ebFkSk3GdcFVpBfDL4zgwQYGWHxsiBk8Z2WZNlx-X6A/me.png"
-                                data-image="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1536442012684-5YXHCNOQNKMBMXF3UDX1/ke17ZwdGBToddI8pDm48kGZsbMQorZLBvTsrYytc7qF7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0qqML2YsA4X4Bu62F5Escy-ebFkSk3GdcFVpBfDL4zgwQYGWHxsiBk8Z2WZNlx-X6A/me.png"
-                                data-image-dimensions="2500x1963" data-image-focal-point="0.5,0.5" alt="me.png" />
+                                <img src="me.png" data-image-dimensions="2500x1963" data-image-focal-point="0.5,0.5" alt="Hello! I'm Shagun - " />
 
                                 <div class="image-overlay">
                                 </div>
@@ -662,9 +658,9 @@ id="collection-5b92949c898583d1de84fb5a">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-3f102ee7ea0728cafa8e">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">And I am an aspiring UX Designer pursing a dual degree in Computer Science and Psychology from the University of Rochester. I am interested in creating experiences that are intuitive and memorable. I am also interested in learning
+                      <p>And I am an aspiring UX Designer pursing a dual degree in Computer Science and Psychology from the University of Rochester. I am interested in creating experiences that are intuitive and memorable. I am also interested in learning
                         more about the role of emotion in design and affective designing.&nbsp;</p>
-                      <p style="white-space: pre-wrap;">I am so excited to share my story with you!</p>
+                      <p>I am so excited to share my story with you!</p>
                     </div>
                   </div>
                   <div class="sqs-block socialaccountlinks-v2-block sqs-block-socialaccountlinks-v2" data-block-type="54" id="block-f2bf9692288cce2b6751">
