--- a/site/along-those-lines/index.html
+++ b/site/along-those-lines/index.html
@@ -686,10 +686,10 @@ id="collection-5b95d4f06d2a7348d7835e9c">
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1540004063755_21571">
                     <div class="sqs-block-content">
                       <h1 style="text-align: center; white-space: pre-wrap;">My Process</h1>
-                      <p style="white-space: pre-wrap;">In this piece I explored the themes of <strong>body-positivity</strong> and <strong>constraints</strong>. My initial idea was much more related to women's rights and body-shaming, but I worked on the concept, I realized, we all have
+                      <p>In this piece I explored the themes of <strong>body-positivity</strong> and <strong>constraints</strong>. My initial idea was much more related to women's rights and body-shaming, but I worked on the concept, I realized, we all have
                         our battles to fight - Some of us fight for our bodies, some for our identities, some for our heritage, some for our language, some for our sexuality, some for our gender, some for our cultures and some for our freedom and independence
                         -&nbsp;the list goes on. And so I expanded my concept to represent to create a sense of <strong>universal struggle</strong>.&nbsp;</p>
-                      <p style="white-space: pre-wrap;"><strong>This is the story behind the lines</strong></p>
+                      <p><strong>This is the story behind the lines</strong></p>
                     </div>
                   </div>
                   <div class="row sqs-row">
@@ -703,8 +703,8 @@ id="collection-5b95d4f06d2a7348d7835e9c">
                     <div class="col sqs-col-8 span-8">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536547030294_9727">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">Since this had to be a performance art piece, I wanted to experiment with the way we use our bodies. I was very inspired by prominent Performance Artists, <strong>VALIE EXPORT</strong> (<em>Tap and Touch Cinema</em>) and <strong>Marina Abramovic</strong>                            (<em>Rhythm O</em>). As for my theme, I wanted to delve into the realms of feminist movements and body-positivity. Once particular inspiration came from the tumblr blog, <a href="http://headlesswomenofhollywood.com" target="_blank">Headless Women of Hollywood</a>                            by <strong>Marcia Belsky</strong>.</p>
-                          <p style="white-space: pre-wrap;">My initial idea was to paint my body with lines that mimic that of a plastic surgeon so as to protest the idea that women's bodies need to cut up.&nbsp;</p>
+                          <p>Since this had to be a performance art piece, I wanted to experiment with the way we use our bodies. I was very inspired by prominent Performance Artists, <strong>VALIE EXPORT</strong> (<em>Tap and Touch Cinema</em>) and <strong>Marina Abramovic</strong>                            (<em>Rhythm O</em>). As for my theme, I wanted to delve into the realms of feminist movements and body-positivity. Once particular inspiration came from the tumblr blog, <a href="http://headlesswomenofhollywood.com" target="_blank">Headless Women of Hollywood</a>                            by <strong>Marcia Belsky</strong>.</p>
+                          <p>My initial idea was to paint my body with lines that mimic that of a plastic surgeon so as to protest the idea that women's bodies need to cut up.&nbsp;</p>
                         </div>
                       </div>
                     </div>
@@ -722,9 +722,9 @@ id="collection-5b95d4f06d2a7348d7835e9c">
                     <div class="col sqs-col-8 span-8">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536547030294_30290">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">I came to realize that while the lines may have represented beauty-expectations for me. They could represent a lot of other things for people. The obligations of a committed relationships/marriage. Social pressure and competition
+                          <p>I came to realize that while the lines may have represented beauty-expectations for me. They could represent a lot of other things for people. The obligations of a committed relationships/marriage. Social pressure and competition
                             at the workplace. The struggle to conform to society's roles for gender and sexuality. The struggle for identity.</p>
-                          <p style="white-space: pre-wrap;">To abstract away from the original idea of beauty as constraint. I chose to draw my lines more haphazardly. Representing thoughts of overlap, excess, and burden. I wanted to feel heavy with the lines.&nbsp;&nbsp;</p>
+                          <p>To abstract away from the original idea of beauty as constraint. I chose to draw my lines more haphazardly. Representing thoughts of overlap, excess, and burden. I wanted to feel heavy with the lines.&nbsp;&nbsp;</p>
                         </div>
                       </div>
                     </div>
@@ -742,8 +742,8 @@ id="collection-5b95d4f06d2a7348d7835e9c">
                     <div class="col sqs-col-8 span-8">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536547030294_49342">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">Another aspect of this piece that I worked on was the tone of the performance - I wanted it to be hopeful and happy instead of sad.</p>
-                          <p style="white-space: pre-wrap;">I leveraged my power to film and edit to really bring this aspect to life. I decided to play the entire clip in reverse as if I was removing lines rather than adding them! This brought an immediate difference in tone.&nbsp;</p>
+                          <p>Another aspect of this piece that I worked on was the tone of the performance - I wanted it to be hopeful and happy instead of sad.</p>
+                          <p>I leveraged my power to film and edit to really bring this aspect to life. I decided to play the entire clip in reverse as if I was removing lines rather than adding them! This brought an immediate difference in tone.&nbsp;</p>
                         </div>
                       </div>
                     </div>
@@ -761,11 +761,11 @@ id="collection-5b95d4f06d2a7348d7835e9c">
                     <div class="col sqs-col-8 span-8">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536547030294_69238">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">As I practiced my performance before filming, I noticed that I hadn't given much thought to how my body was placed. I wanted my body to reflect the reducing of lines, almost as if a heavy weight was slowly being taken off from
+                          <p>As I practiced my performance before filming, I noticed that I hadn't given much thought to how my body was placed. I wanted my body to reflect the reducing of lines, almost as if a heavy weight was slowly being taken off from
                             it.&nbsp;</p>
-                          <p style="white-space: pre-wrap;">To do this, I chatted with a student choreographer about the ways in which we hold our bodies. She pointed out to me that as women we are conditioned to use as little space as possible. We cross our legs and keep our bodies closed
+                          <p>To do this, I chatted with a student choreographer about the ways in which we hold our bodies. She pointed out to me that as women we are conditioned to use as little space as possible. We cross our legs and keep our bodies closed
                             because we are being "modest" or "conservative". Whereas men tend to occupy as much space as possible. They sit with their legs spread open, and try to fill the room with their presence.&nbsp;</p>
-                          <p style="white-space: pre-wrap;">To reflect the unburdening, I started the video is a constrained position with the legs against my chest and used a closer camera angle to give the perception of a lack of space, but as the video progressed, the camera zoomed
+                          <p>To reflect the unburdening, I started the video is a constrained position with the legs against my chest and used a closer camera angle to give the perception of a lack of space, but as the video progressed, the camera zoomed
                             out and the body opened up covering more and more space in the room.</p>
                         </div>
                       </div>
@@ -784,8 +784,8 @@ id="collection-5b95d4f06d2a7348d7835e9c">
                     <div class="col sqs-col-8 span-8">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536547030294_106616">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">The next aspect I worked on was the lighting. I did a test shoot the day before my actual shoot to try out different forms of lighting.&nbsp;</p>
-                          <p style="white-space: pre-wrap;">My goals was to create a subtle criss cross of warm colors. I wanted the composition to feel warm and become increasingly more comfortable. To do this I played with red and yellow films on diva lights.&nbsp;</p>
+                          <p>The next aspect I worked on was the lighting. I did a test shoot the day before my actual shoot to try out different forms of lighting.&nbsp;</p>
+                          <p>My goals was to create a subtle criss cross of warm colors. I wanted the composition to feel warm and become increasingly more comfortable. To do this I played with red and yellow films on diva lights.&nbsp;</p>
                         </div>
                       </div>
                     </div>
@@ -803,10 +803,10 @@ id="collection-5b95d4f06d2a7348d7835e9c">
                     <div class="col sqs-col-8 span-8">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536547030294_126575">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">The last piece in my puzzle was Sound. I spend a lot of time trying to figure out the best sound to accompany the performance in video.. Given the length of the piece, I did not want to leave it mute or with the natural sound
+                          <p>The last piece in my puzzle was Sound. I spend a lot of time trying to figure out the best sound to accompany the performance in video.. Given the length of the piece, I did not want to leave it mute or with the natural sound
                             as it would take away from the performance.&nbsp;</p>
-                          <p style="white-space: pre-wrap;">I considered adding some sort fo uplifting/melodic tune but I couldn't find any that connected well with the video.&nbsp;</p>
-                          <p style="white-space: pre-wrap;">I wanted sound to be as much a part of the video as the performance itself. I achieved this with the sound of talking which stood as an analogy for Freud's "Dominant Mass". As the video progressed, the talking got quieter, as
+                          <p>I considered adding some sort fo uplifting/melodic tune but I couldn't find any that connected well with the video.&nbsp;</p>
+                          <p>I wanted sound to be as much a part of the video as the performance itself. I achieved this with the sound of talking which stood as an analogy for Freud's "Dominant Mass". As the video progressed, the talking got quieter, as
                             if by erasing the lines, I had got rid of their impact on me and was free to be myself.&nbsp;</p>
                         </div>
                       </div>
@@ -825,9 +825,9 @@ id="collection-5b95d4f06d2a7348d7835e9c">
                     <div class="col sqs-col-8 span-8">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536547030294_172582">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">In the end of the video, I added a short clip of me laughing - completely spotless. I found that this gave a nice conclusion to my message. I had travelled back in time to when I was just a child and the world was filled with
+                          <p>In the end of the video, I added a short clip of me laughing - completely spotless. I found that this gave a nice conclusion to my message. I had travelled back in time to when I was just a child and the world was filled with
                             wonder and I was free to be whoever I wanted to be.&nbsp;</p>
-                          <p style="white-space: pre-wrap;">I now had a clean slate.</p>
+                          <p>I now had a clean slate.</p>
                         </div>
                       </div>
                     </div>
@@ -845,9 +845,9 @@ id="collection-5b95d4f06d2a7348d7835e9c">
                     <div class="col sqs-col-8 span-8">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536547030294_198685">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">The performance of this piece had a great impact on me. Being forced to be vulnerable in front of a camera – at first, I was very nervous but as time went along I started to feel so much more comfortable and free. It was a very
+                          <p>The performance of this piece had a great impact on me. Being forced to be vulnerable in front of a camera – at first, I was very nervous but as time went along I started to feel so much more comfortable and free. It was a very
                             cathartic feeling.</p>
-                          <p style="white-space: pre-wrap;">The technical production of this film was especially challenging as I had to simultaneously act in the frame and compose the frame. However, this experience was very rewarding and I learned a lot from it!</p>
+                          <p>The technical production of this film was especially challenging as I had to simultaneously act in the frame and compose the frame. However, this experience was very rewarding and I learned a lot from it!</p>
                         </div>
                       </div>
                     </div>
