--- a/site/ana/index.html
+++ b/site/ana/index.html
@@ -685,8 +685,8 @@ id="collection-5b95d38bc2241b07791c0005">
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1540006421983_13190">
                     <div class="sqs-block-content">
                       <h1 style="text-align: center; white-space: pre-wrap;">My Process</h1>
-                      <p style="white-space: pre-wrap;"><em>disclaimer: Actors in this film were not cast on the basis of their race, gender, sex or ethnicity. </em></p>
-                      <p style="white-space: pre-wrap;">I explored the concepts of <strong>fear, anxiety </strong>and<strong> self-control</strong> in this film. Although the film is loosely based on anorexia, the focus of this short film is on the struggle of a young woman and not to
+                      <p><em>disclaimer: Actors in this film were not cast on the basis of their race, gender, sex or ethnicity. </em></p>
+                      <p>I explored the concepts of <strong>fear, anxiety </strong>and<strong> self-control</strong> in this film. Although the film is loosely based on anorexia, the focus of this short film is on the struggle of a young woman and not to
                         create an accurate representation of the disorder. The goal is to highlight her fear, anxiety and, distress at the thought of eating. The video tries to highlight how her <strong>struggle is not linear</strong> but goes back and
                         forth. Additionally, as a challenge I created the narrative of the film using absolutely no dialogue, making rendering emotions a harder task.</p>
                     </div>
@@ -704,7 +704,7 @@ id="collection-5b95d38bc2241b07791c0005">
                     <div class="col sqs-col-9 span-9">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536549910948_141673">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">An eating disorder such as Anorexia is often categorized by a fear of eating. A person's ego maintains such a tight control over the person - using guilt and shame to police them into not eating anything. My idea was to anthropomorphize
+                          <p>An eating disorder such as Anorexia is often categorized by a fear of eating. A person's ego maintains such a tight control over the person - using guilt and shame to police them into not eating anything. My idea was to anthropomorphize
                             this dominant ego in my film and depict the relationship between the lead character and this "friend". This relationship is very toxic &nbsp;-&nbsp;showing similar signs as an emotionally abusive relationship. The lead is clearly
                             terrified of their friend. The friend is stern and dominating in their body language. And yet the lead is comforted by this friend...</p>
                         </div>
@@ -724,9 +724,9 @@ id="collection-5b95d38bc2241b07791c0005">
                     <div class="col sqs-col-9 span-9">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536549910948_11566">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">The shoot for this film was guided by the narrative I had created and so it was the first thing I did. For editing purposes, I shot every moment from at least 3 angles, left, right and changed perspective (top/bottom/behind something).&nbsp;</p>
+                          <p>The shoot for this film was guided by the narrative I had created and so it was the first thing I did. For editing purposes, I shot every moment from at least 3 angles, left, right and changed perspective (top/bottom/behind something).&nbsp;</p>
                           <p
-                          style="white-space: pre-wrap;">It was a bit of a challenge to shoot freehand as that made a video a bit shaky; but it was a deliberate decision as the slight shakiness helped to highlight the general tone of anxiety in the film.&nbsp;</p>
+                         >It was a bit of a challenge to shoot freehand as that made a video a bit shaky; but it was a deliberate decision as the slight shakiness helped to highlight the general tone of anxiety in the film.&nbsp;</p>
                         </div>
                       </div>
                     </div>
@@ -744,7 +744,7 @@ id="collection-5b95d38bc2241b07791c0005">
                     <div class="col sqs-col-9 span-9">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536549910948_28500">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">Much of the magic of film was brought around in the editing phase. I tried to play with color masking, slowing clips down and overlaying multiple clips. I had to be smart in the way I cut the film so as to always keep the supporting
+                          <p>Much of the magic of film was brought around in the editing phase. I tried to play with color masking, slowing clips down and overlaying multiple clips. I had to be smart in the way I cut the film so as to always keep the supporting
                             character as a bit of a mystery (except for one defining moment).&nbsp;</p>
                         </div>
                       </div>
@@ -763,7 +763,7 @@ id="collection-5b95d38bc2241b07791c0005">
                     <div class="col sqs-col-9 span-9">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536549910948_45712">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">The last thing to add was sound. I decided to use the beep of cardio-graph as it is associative with that of a heart beat. I wanted to mimic the lead character's heart-beat as she progressed through the sequence of events. Speeding
+                          <p>The last thing to add was sound. I decided to use the beep of cardio-graph as it is associative with that of a heart beat. I wanted to mimic the lead character's heart-beat as she progressed through the sequence of events. Speeding
                             up as she got more anxious and slowing down in other moments. In the end I simply made the sound fade away as if the heart rate had become flat - this was to signify that she lost her current struggle and had become overwhelmed.
                             Although, I let it trail to show that a struggle never really "ends" - rather it ebbs and flows. This added to the idea that the lead's struggle is not linear.&nbsp;</p>
                         </div>
@@ -783,7 +783,7 @@ id="collection-5b95d38bc2241b07791c0005">
                     <div class="col sqs-col-9 span-9">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536549910948_67448">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">This is one of my first proper film pieces and was definitely a great learning experience for me. The one thing I learnt was that as an artist, 'oversight' isn't a valid excuse. Although I hadn't intended it to cast my characters
+                          <p>This is one of my first proper film pieces and was definitely a great learning experience for me. The one thing I learnt was that as an artist, 'oversight' isn't a valid excuse. Although I hadn't intended it to cast my characters
                             in any specific manner, the fact that the victim was white and the 'villain' was a person of color definitely stirred up some debate - while some felt that putting a person of color in a dominating role was a reversal of colonization,
                             other felt I was demonizing. I would like to clarify that I did not intend to portray either of those arguments, however I did learn to be more cognizant of my work is perceived.&nbsp;</p>
                         </div>
