--- a/site/creativity-project/index.html
+++ b/site/creativity-project/index.html
@@ -635,7 +635,7 @@ id="collection-5bc36fa2652deab94f1f348e">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539999804683_58225">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">I am a research assistant with <a href="http://roc-hci.com" target="_blank">ROC HCI</a>, Professor <a href="http://hoques.com" target="_blank">Ehsan Hoque’s</a> lab at the University of Rochester. In the lab, I am on Ph.D student
+                      <p>I am a research assistant with <a href="http://roc-hci.com" target="_blank">ROC HCI</a>, Professor <a href="http://hoques.com" target="_blank">Ehsan Hoque’s</a> lab at the University of Rochester. In the lab, I am on Ph.D student
                         <a href="http://raiyanab.com" target="_blank">Raiyan Abdul Baten’s</a> team for his research project to study the impact of networks on creativity.</p>
                     </div>
                   </div>
@@ -652,8 +652,8 @@ id="collection-5bc36fa2652deab94f1f348e">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-d387bfd1566834d34d75">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">My main role is to design the interface for the study and help translate design into front-end code. I am also assisting with research, study-design, and collecting/analyzing data.</p>
-                      <p data-rte-preserve-empty="true" style="white-space: pre-wrap;"></p>
+                      <p>My main role is to design the interface for the study and help translate design into front-end code. I am also assisting with research, study-design, and collecting/analyzing data.</p>
+                      <p data-rte-preserve-empty="true"></p>
                     </div>
                   </div>
                 </div>
@@ -664,7 +664,7 @@ id="collection-5bc36fa2652deab94f1f348e">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539534754857_12085">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">The study is divided into three stages and the participants have to respond to a prompt that tests their creativity. Since the study has multiple tasks, information has to be presented concisely. Additionally since it is online,
+                      <p>The study is divided into three stages and the participants have to respond to a prompt that tests their creativity. Since the study has multiple tasks, information has to be presented concisely. Additionally since it is online,
                         errors have to be handled creatively as participants will not be able to ask a researcher if they get stuck or need help. </p>
                     </div>
                   </div>
@@ -681,26 +681,26 @@ id="collection-5bc36fa2652deab94f1f348e">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-596618ac82b921cd532d">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">After reading more about the study and talking with team I have come up with the following list for what my design needs to include: </p>
+                      <p>After reading more about the study and talking with team I have come up with the following list for what my design needs to include: </p>
                     </div>
                   </div>
                   <div class="row sqs-row">
                     <div class="col sqs-col-4 span-4">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539536674078_44895">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;"><strong>PART 1: SOLO</strong></p>
-                          <p style="white-space: pre-wrap;">users attempt the task on their own with no influence from others.</p>
+                          <p><strong>PART 1: SOLO</strong></p>
+                          <p>users attempt the task on their own with no influence from others.</p>
                           <ul data-rte-list="default">
                             <li>
-                              <p style="white-space: pre-wrap;"><strong>Task Related</strong>: Task Prompt, Answer-Space, Timer for task</p>
+                              <p><strong>Task Related</strong>: Task Prompt, Answer-Space, Timer for task</p>
                             </li>
                           </ul>
                           <ul data-rte-list="default">
                             <li>
-                              <p style="white-space: pre-wrap;"><strong>User stats</strong>: Username and Score</p>
+                              <p><strong>User stats</strong>: Username and Score</p>
                             </li>
                             <li>
-                              <p style="white-space: pre-wrap;"><strong>Network Related</strong>: N/A</p>
+                              <p><strong>Network Related</strong>: N/A</p>
                             </li>
                           </ul>
                         </div>
@@ -711,17 +711,17 @@ id="collection-5bc36fa2652deab94f1f348e">
                         <div class="col sqs-col-4 span-4">
                           <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539536674078_61535">
                             <div class="sqs-block-content">
-                              <p style="white-space: pre-wrap;"><strong>PART 2: STATIC NETWORK</strong></p>
-                              <p style="white-space: pre-wrap;">users are now allowed to see answers from others in their network and edit their list. </p>
+                              <p><strong>PART 2: STATIC NETWORK</strong></p>
+                              <p>users are now allowed to see answers from others in their network and edit their list. </p>
                               <ul data-rte-list="default">
                                 <li>
-                                  <p style="white-space: pre-wrap;"><strong>Task Related</strong>: Task Prompt, Answer Space and Timer</p>
+                                  <p><strong>Task Related</strong>: Task Prompt, Answer Space and Timer</p>
                                 </li>
                                 <li>
-                                  <p style="white-space: pre-wrap;"><strong>User Stats</strong>: Username and Score</p>
+                                  <p><strong>User Stats</strong>: Username and Score</p>
                                 </li>
                                 <li>
-                                  <p style="white-space: pre-wrap;"><strong>Network Related:</strong> Display answers from others on their network</p>
+                                  <p><strong>Network Related:</strong> Display answers from others on their network</p>
                                 </li>
                               </ul>
                             </div>
@@ -730,17 +730,17 @@ id="collection-5bc36fa2652deab94f1f348e">
                         <div class="col sqs-col-4 span-4">
                           <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539536674078_53264">
                             <div class="sqs-block-content">
-                              <p style="white-space: pre-wrap;"><strong>PART 3: DYNAMIC NETWORK</strong></p>
-                              <p style="white-space: pre-wrap;">users may change who they follow, before the next round starts</p>
+                              <p><strong>PART 3: DYNAMIC NETWORK</strong></p>
+                              <p>users may change who they follow, before the next round starts</p>
                               <ul data-rte-list="default">
                                 <li>
-                                  <p style="white-space: pre-wrap;"><strong>Task Related</strong> - N/A</p>
+                                  <p><strong>Task Related</strong> - N/A</p>
                                 </li>
                                 <li>
-                                  <p style="white-space: pre-wrap;"><strong>User Stats</strong>: Username and Sore </p>
+                                  <p><strong>User Stats</strong>: Username and Sore </p>
                                 </li>
                                 <li>
-                                  <p style="white-space: pre-wrap;"><strong>Network Related</strong>: follow and unfollow other users based on their answers </p>
+                                  <p><strong>Network Related</strong>: follow and unfollow other users based on their answers </p>
                                 </li>
                               </ul>
                             </div>
@@ -751,16 +751,16 @@ id="collection-5bc36fa2652deab94f1f348e">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539536674078_77325">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;"><strong>SOME RESTRICTIONS</strong></p>
+                      <p><strong>SOME RESTRICTIONS</strong></p>
                       <ul data-rte-list="default">
                         <li>
-                          <p style="white-space: pre-wrap;">Users are allowed to enter up to 6 items in answer to prompt. </p>
+                          <p>Users are allowed to enter up to 6 items in answer to prompt. </p>
                         </li>
                         <li>
-                          <p style="white-space: pre-wrap;">The prompt has to be written and not pictorial.</p>
+                          <p>The prompt has to be written and not pictorial.</p>
                         </li>
                         <li>
-                          <p style="white-space: pre-wrap;"> A user will have only 3 others in their network at any given time</p>
+                          <p> A user will have only 3 others in their network at any given time</p>
                         </li>
                       </ul>
                     </div>
@@ -774,7 +774,7 @@ id="collection-5bc36fa2652deab94f1f348e">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-2528f0b6da55eba2138b">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">Unlike a website where users can navigate in multiple ways, this interface has to provide users with specific clues as to where to proceed next. Therefore I worked on creating a specific flow chart for how the user would progress
+                      <p>Unlike a website where users can navigate in multiple ways, this interface has to provide users with specific clues as to where to proceed next. Therefore I worked on creating a specific flow chart for how the user would progress
                         through the interface. </p>
                     </div>
                   </div>
@@ -827,7 +827,7 @@ id="collection-5bc36fa2652deab94f1f348e">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539534754857_39708">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">Here are some shots from the initial wireframes and ideas that I have created: </p>
+                      <p>Here are some shots from the initial wireframes and ideas that I have created: </p>
                     </div>
                   </div>
                   <div class="row sqs-row">
@@ -1139,7 +1139,7 @@ id="collection-5bc36fa2652deab94f1f348e">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539937578011_546950">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">I am currently collaborating with the team to translate the design into front-end code so that we can run a pilot soon. After which we can reflect on the data gathered and feedback received to consider the direction the research
+                      <p>I am currently collaborating with the team to translate the design into front-end code so that we can run a pilot soon. After which we can reflect on the data gathered and feedback received to consider the direction the research
                         should take and any possible UI improvements. </p>
                     </div>
                   </div>
