--- a/site/resume-1/index.html
+++ b/site/resume-1/index.html
@@ -823,7 +823,7 @@ id="collection-5bea644503ce64fff0fa8f38">
                           <p style="text-align: center; white-space: pre-wrap;">Storyboarding</p>
                           <p style="text-align: center; white-space: pre-wrap;">Prototyping</p>
                           <p style="text-align: center; white-space: pre-wrap;">Usability Testing</p>
-                          <p data-rte-preserve-empty="true" style="white-space: pre-wrap;"></p>
+                          <p data-rte-preserve-empty="true"></p>
                         </div>
                       </div>
                     </div>
@@ -841,7 +841,7 @@ id="collection-5bea644503ce64fff0fa8f38">
                     <div class="col sqs-col-2 span-2">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1542087750287_69783">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">November ‘18 - present</p>
+                          <p>November ‘18 - present</p>
                         </div>
                       </div>
                     </div>
@@ -853,8 +853,8 @@ id="collection-5bea644503ce64fff0fa8f38">
                     <div class="col sqs-col-7 span-7">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1542087750287_79168">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;"><strong>PLAYFUL PRESENTS</strong> | User Experience Intern</p>
-                          <p style="white-space: pre-wrap;">Designing the UX and brand identity for www.playfulpresents.com, a design firm, to consolidate the different types of services offered.</p>
+                          <p><strong>PLAYFUL PRESENTS</strong> | User Experience Intern</p>
+                          <p>Designing the UX and brand identity for www.playfulpresents.com, a design firm, to consolidate the different types of services offered.</p>
                         </div>
                       </div>
                     </div>
@@ -863,7 +863,7 @@ id="collection-5bea644503ce64fff0fa8f38">
                     <div class="col sqs-col-2 span-2">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1542087750287_94078">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">October’ 18 - present</p>
+                          <p>October’ 18 - present</p>
                         </div>
                       </div>
                     </div>
@@ -875,9 +875,9 @@ id="collection-5bea644503ce64fff0fa8f38">
                     <div class="col sqs-col-7 span-7">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1542087750287_90024">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;"><strong>ROCHCI LAB</strong> | Interaction Designer &amp; Research Assistant</p>
-                          <p style="white-space: pre-wrap;">Designing the UI for an online study that is simple and easy to navigate, while also incorporating all the variable elements and tasks to be performed by the participants.&nbsp;</p>
-                          <p style="white-space: pre-wrap;">Assisting with research, study-design, and collecting/analyzing data.&nbsp; <a href="/creativity-project">Go to project</a></p>
+                          <p><strong>ROCHCI LAB</strong> | Interaction Designer &amp; Research Assistant</p>
+                          <p>Designing the UI for an online study that is simple and easy to navigate, while also incorporating all the variable elements and tasks to be performed by the participants.&nbsp;</p>
+                          <p>Assisting with research, study-design, and collecting/analyzing data.&nbsp; <a href="/creativity-project">Go to project</a></p>
                         </div>
                       </div>
                     </div>
@@ -886,7 +886,7 @@ id="collection-5bea644503ce64fff0fa8f38">
                     <div class="col sqs-col-2 span-2">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1542087750287_105018">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">October’18 - present</p>
+                          <p>October’18 - present</p>
                         </div>
                       </div>
                     </div>
@@ -898,8 +898,8 @@ id="collection-5bea644503ce64fff0fa8f38">
                     <div class="col sqs-col-7 span-7">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1542087750287_100432">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;"><strong>BARTER OUT</strong> | User Experience Designer</p>
-                          <p style="white-space: pre-wrap;">Conducting user research, creating wireframes and prototypes to work on improving the overall experience of using the platform and allowing for greater customer need satisfaction.&nbsp;
+                          <p><strong>BARTER OUT</strong> | User Experience Designer</p>
+                          <p>Conducting user research, creating wireframes and prototypes to work on improving the overall experience of using the platform and allowing for greater customer need satisfaction.&nbsp;
                             <br><a href="/barter-out">Go to project</a></p>
                         </div>
                       </div>
@@ -909,7 +909,7 @@ id="collection-5bea644503ce64fff0fa8f38">
                     <div class="col sqs-col-2 span-2">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1542087750287_113455">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">September’18 - present</p>
+                          <p>September’18 - present</p>
                         </div>
                       </div>
                     </div>
@@ -921,8 +921,8 @@ id="collection-5bea644503ce64fff0fa8f38">
                     <div class="col sqs-col-7 span-7">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1542087750287_117275">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;"><strong>UNIV. OF ROCHESTER</strong> | Workshop Leader - Intro Programming </p>
-                          <p style="white-space: pre-wrap;">Clarifying and deepening understanding of concepts introduced in lecture with a focus on using methods that improve student performance by increasing percieved competence. A peer mentor for students.&nbsp;</p>
+                          <p><strong>UNIV. OF ROCHESTER</strong> | Workshop Leader - Intro Programming </p>
+                          <p>Clarifying and deepening understanding of concepts introduced in lecture with a focus on using methods that improve student performance by increasing percieved competence. A peer mentor for students.&nbsp;</p>
                         </div>
                       </div>
                     </div>
@@ -935,13 +935,13 @@ id="collection-5bea644503ce64fff0fa8f38">
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1542087750287_23626">
                     <div class="sqs-block-content">
                       <h3 style="text-align: center; white-space: pre-wrap;">Education</h3>
-                      <p style="white-space: pre-wrap;"><strong>UNIVERSITY OF ROCHESTER</strong> | May 2020</p>
-                      <p style="white-space: pre-wrap;"><em>Bachelors of Arts in Computer Science and Psychology | Minor in Studio Art</em></p>
-                      <p style="white-space: pre-wrap;">GPA: 3.91/4.0, Undergrad CS Council (Outreach Chair), CETL Academic Tutor, Women in Computing, Theatre</p>
-                      <p data-rte-preserve-empty="true" style="white-space: pre-wrap;"></p>
-                      <p style="white-space: pre-wrap;"><strong>RECURSE CENTER</strong> | May - June 2018</p>
-                      <p style="white-space: pre-wrap;"><em>Self Directed Programming Retreat in New York City</em></p>
-                      <p style="white-space: pre-wrap;">Learnt about the different technologies involved in front-end web design and development. Created small websites/apps using those tools.&nbsp;</p>
+                      <p><strong>UNIVERSITY OF ROCHESTER</strong> | May 2020</p>
+                      <p><em>Bachelors of Arts in Computer Science and Psychology | Minor in Studio Art</em></p>
+                      <p>GPA: 3.91/4.0, Undergrad CS Council (Outreach Chair), CETL Academic Tutor, Women in Computing, Theatre</p>
+                      <p data-rte-preserve-empty="true"></p>
+                      <p><strong>RECURSE CENTER</strong> | May - June 2018</p>
+                      <p><em>Self Directed Programming Retreat in New York City</em></p>
+                      <p>Learnt about the different technologies involved in front-end web design and development. Created small websites/apps using those tools.&nbsp;</p>
                     </div>
                   </div>
                   <div class="sqs-block spacer-block sqs-block-spacer sized vsize-1" data-block-type="21" id="block-2b0b677ad1eef84efd63">
@@ -949,7 +949,7 @@ id="collection-5bea644503ce64fff0fa8f38">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1542089646084_63586">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;"><a href="/s/Resume-Shagun-Bose.pdf" target="_blank">View PDF</a></p>
+                      <p><a href="/s/Resume-Shagun-Bose.pdf" target="_blank">View PDF</a></p>
                     </div>
                   </div>
                 </div>
