--- a/site/storm-before-the-calm/index.html
+++ b/site/storm-before-the-calm/index.html
@@ -868,7 +868,7 @@ id="collection-5b95ca5e758d46c1237802bb">
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1540006522234_12069">
                     <div class="sqs-block-content">
                       <h1 style="text-align: center; white-space: pre-wrap;">My Process</h1>
-                      <p style="white-space: pre-wrap;">This piece is an exploration into the world of sound and sound-composition. The goal was to record sounds from a space and create a composition from those sounds that transform it in some way.&nbsp;</p>
+                      <p>This piece is an exploration into the world of sound and sound-composition. The goal was to record sounds from a space and create a composition from those sounds that transform it in some way.&nbsp;</p>
                     </div>
                   </div>
                   <div class="row sqs-row">
@@ -884,7 +884,7 @@ abstract
                     <div class="col sqs-col-9 span-9">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536552410425_7227">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">Emotion as a wave.&nbsp;It rises and recedes. How can I show the onset and passing of an emotion?&nbsp;The transformation from a seemingly normal mental landscape into a flood of emotion.</p>
+                          <p>Emotion as a wave.&nbsp;It rises and recedes. How can I show the onset and passing of an emotion?&nbsp;The transformation from a seemingly normal mental landscape into a flood of emotion.</p>
                         </div>
                       </div>
                     </div>
@@ -905,22 +905,22 @@ research
                     <div class="col sqs-col-9 span-9">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536552410425_8189">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">Some sound artists whose work I drew inspiration from:</p>
+                          <p>Some sound artists whose work I drew inspiration from:</p>
                           <ul data-rte-list="default">
                             <li>
-                              <p style="white-space: pre-wrap;">Jóhann Jóhannsson, First Encounter &amp; A Normal Family</p>
+                              <p>Jóhann Jóhannsson, First Encounter &amp; A Normal Family</p>
                             </li>
                           </ul>
-                          <p style="white-space: pre-wrap;"><em>First Encounter</em>, featured in the film <em>Arrival</em>,&nbsp;describes the humans’ first encounter with aliens in their weird oblong spaceship. The experience that this sound gives the user is quite interesting: the
+                          <p><em>First Encounter</em>, featured in the film <em>Arrival</em>,&nbsp;describes the humans’ first encounter with aliens in their weird oblong spaceship. The experience that this sound gives the user is quite interesting: the
                             sound score seems to build slowly to a soft steady beat (as if one were approaching something)&nbsp;with a tone of caution still there. But the listener experiences the “encounter” – it’s sudden, altogether unexpected and very
                             jarring!
                           </p>
                           <ul data-rte-list="default">
                             <li>
-                              <p style="white-space: pre-wrap;">Daphne Oram, Four Aspects &amp; Pulse Persephone.</p>
+                              <p>Daphne Oram, Four Aspects &amp; Pulse Persephone.</p>
                             </li>
                           </ul>
-                          <p style="white-space: pre-wrap;">Oram's work is at once weird and captivating! I had to hear it twice to truly understand it. It gave me a rather eerie vibe - as if I was in a trance and simply floating through the world, fading in and out. I loved how she maintained
+                          <p>Oram's work is at once weird and captivating! I had to hear it twice to truly understand it. It gave me a rather eerie vibe - as if I was in a trance and simply floating through the world, fading in and out. I loved how she maintained
                             a steady beat in her works <em>Four Aspects</em> and <em>Pulse Persephone</em>.&nbsp;</p>
                         </div>
                       </div>
@@ -942,10 +942,10 @@ editing
                     <div class="col sqs-col-9 span-9">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536552410425_8731">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">For this piece I did not go into the editing phase right away. Instead I spent some time in a sandbox, exploring editing effects like changing pitch and speed,&nbsp;phasing, distortion, overlapping etc. And also compositional
+                          <p>For this piece I did not go into the editing phase right away. Instead I spent some time in a sandbox, exploring editing effects like changing pitch and speed,&nbsp;phasing, distortion, overlapping etc. And also compositional
                             techniques like panning to the left and right and, using silences strategically. This also allowed me to get more comfortable with the software I was using.</p>
-                          <p style="white-space: pre-wrap;">Exploring ideas in the sandbox allowed me to think about the overall composition of my piece and how I would like it to flow.&nbsp;&nbsp;I definitely used some of the components I made in the sandbox, but also created new ones.&nbsp;</p>
-                          <p style="white-space: pre-wrap;">Here is a playlist of each individual sound that made up the entire piece:&nbsp;</p>
+                          <p>Exploring ideas in the sandbox allowed me to think about the overall composition of my piece and how I would like it to flow.&nbsp;&nbsp;I definitely used some of the components I made in the sandbox, but also created new ones.&nbsp;</p>
+                          <p>Here is a playlist of each individual sound that made up the entire piece:&nbsp;</p>
                         </div>
                       </div>
                       <div class="sqs-block embed-block sqs-block-embed" data-block-json="&#123;&quot;hSize&quot;:null,&quot;floatDir&quot;:null,&quot;url&quot;:&quot;https://soundcloud.com/shagun-bose/sets/isolated-sounds-for-storm-before-the-calm&quot;,&quot;html&quot;:&quot;&lt;iframe width=\&quot;100%\&quot; height=\&quot;450\&quot; scrolling=\&quot;no\&quot; frameborder=\&quot;no\&quot; allow=\&quot;autoplay\&quot; src=\&quot;https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/441282219&amp;color=%2372d1de&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true\&quot;&gt;&lt;/iframe&gt;&quot;,&quot;resolveObject&quot;:&quot;Audio&quot;,&quot;resolvedBy&quot;:&quot;manual&quot;,&quot;resolved&quot;:true,&quot;version&quot;:1,&quot;type&quot;:&quot;rich&quot;,&quot;height&quot;:450,&quot;width&quot;:&quot;100%&quot;,&quot;title&quot;:&quot;Isolated Sounds for Storm Before The Calm by Shagun Bose&quot;,&quot;description&quot;:&quot;&quot;,&quot;authorName&quot;:&quot;Shagun Bose&quot;,&quot;authorUrl&quot;:&quot;https://soundcloud.com/shagun-bose&quot;,&quot;providerName&quot;:&quot;SoundCloud&quot;,&quot;providerUrl&quot;:&quot;http://soundcloud.com&quot;,&quot;thumbnailUrl&quot;:&quot;http://a1.sndcdn.com/images/fb_placeholder.png?1536313586&quot;&#125;"
@@ -977,7 +977,7 @@ reflection
                     <div class="col sqs-col-9 span-9">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536552410425_22628">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;">This piece helped me really think about sound as an individual entity of its own and not just consider all roles it can play in film and media. I realized that all this while, I had been hearing sounds but never truly listening!</p>
+                          <p>This piece helped me really think about sound as an individual entity of its own and not just consider all roles it can play in film and media. I realized that all this while, I had been hearing sounds but never truly listening!</p>
                         </div>
                       </div>
                     </div>
@@ -1027,9 +1027,6 @@ reflection
               </div>
             </div>
           </div>
-
-
-
         </section>
       </div>
 
