--- a/site/barter-out/index.html
+++ b/site/barter-out/index.html
@@ -563,7 +563,7 @@ id="collection-5bc382cd0852293bddef90ab">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-2581c47fe2f2c062d85b">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">I am a UX Designer for <a href="https://www.barterout.com" target="_blank">Barter Out</a>, a startup created by students at the University of Rochester that provides a platform to make buying and selling second-hand textbooks easier.
+                      <p>I am a UX Designer for <a href="https://www.barterout.com" target="_blank">Barter Out</a>, a startup created by students at the University of Rochester that provides a platform to make buying and selling second-hand textbooks easier.
                         My primary role is conducting user research, creating wireframes and prototypes to work on improving the overall experience of using their platform. </p>
                     </div>
                   </div>
@@ -575,7 +575,7 @@ id="collection-5bc382cd0852293bddef90ab">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-032085ce5328c9d5f166">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">To re-design the platform such that it optimizes a user’s experience of using the platform - ensuring that both buyers and sellers are able to access relevant information easily. </p>
+                      <p>To re-design the platform such that it optimizes a user’s experience of using the platform - ensuring that both buyers and sellers are able to access relevant information easily. </p>
                     </div>
                   </div>
                 </div>
@@ -591,13 +591,13 @@ id="collection-5bc382cd0852293bddef90ab">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-77eba288a806b2ca7fda">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">To learn more about users’ experiences with the platform I am currently conducting user studies among two groups of users: </p>
+                      <p>To learn more about users’ experiences with the platform I am currently conducting user studies among two groups of users: </p>
                       <ul data-rte-list="default">
                         <li>
-                          <p style="white-space: pre-wrap;">Existing users who have accounts on the platform and may have successful transactions. These users can talk towards their positive/negative experiences. </p>
+                          <p>Existing users who have accounts on the platform and may have successful transactions. These users can talk towards their positive/negative experiences. </p>
                         </li>
                         <li>
-                          <p style="white-space: pre-wrap;">New users to interact with the site and perform a set number of tasks - during the time I am attempting to observe where the expectations vs reality of the platform do not synch up.</p>
+                          <p>New users to interact with the site and perform a set number of tasks - during the time I am attempting to observe where the expectations vs reality of the platform do not synch up.</p>
                         </li>
                       </ul>
                     </div>
@@ -609,12 +609,12 @@ id="collection-5bc382cd0852293bddef90ab">
                           <p style="text-align: center; white-space: pre-wrap;"><strong>GROUP 1: EXISTING USERS</strong></p>
                           <ul data-rte-list="default">
                             <li>
-                              <p style="white-space: pre-wrap;">How was your experience buying/selling through Barter Out?</p>
+                              <p>How was your experience buying/selling through Barter Out?</p>
                             </li>
                             <li>
-                              <p style="white-space: pre-wrap;">Was there any particular function that you wish was possible but you were unable to do it?</p>
-                              <p data-rte-preserve-empty="true" style="white-space: pre-wrap;"></p>
-                              <p data-rte-preserve-empty="true" style="white-space: pre-wrap;"></p>
+                              <p>Was there any particular function that you wish was possible but you were unable to do it?</p>
+                              <p data-rte-preserve-empty="true"></p>
+                              <p data-rte-preserve-empty="true"></p>
                             </li>
                           </ul>
                         </div>
@@ -626,22 +626,22 @@ id="collection-5bc382cd0852293bddef90ab">
                           <p style="text-align: center; white-space: pre-wrap;"><strong>GROUP 2: NEW USERS</strong></p>
                           <ul data-rte-list="default">
                             <li>
-                              <p style="white-space: pre-wrap;">Ask Users to do following tasks</p>
+                              <p>Ask Users to do following tasks</p>
                               <ul data-rte-list="default">
                                 <li>
-                                  <p style="white-space: pre-wrap;">Sign In/Log In</p>
+                                  <p>Sign In/Log In</p>
                                 </li>
                                 <li>
-                                  <p style="white-space: pre-wrap;">Browse for a book they might need</p>
+                                  <p>Browse for a book they might need</p>
                                 </li>
                                 <li>
-                                  <p style="white-space: pre-wrap;">Add their own book to the list</p>
+                                  <p>Add their own book to the list</p>
                                 </li>
                                 <li>
-                                  <p style="white-space: pre-wrap;">Delete the book from the list </p>
+                                  <p>Delete the book from the list </p>
                                 </li>
                                 <li>
-                                  <p style="white-space: pre-wrap;">Request an unavailable book</p>
+                                  <p>Request an unavailable book</p>
                                 </li>
                               </ul>
                             </li>
@@ -652,7 +652,7 @@ id="collection-5bc382cd0852293bddef90ab">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539569164320_39345">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">Note: If interested, I want to consider asking users to interact with the site for a week after the interview and log their experience or discuss the experience with me over a follow up interview. </p>
+                      <p>Note: If interested, I want to consider asking users to interact with the site for a week after the interview and log their experience or discuss the experience with me over a follow up interview. </p>
                     </div>
                   </div>
                   <div class="sqs-block spacer-block sqs-block-spacer sized vsize-1" data-block-type="21" id="block-ec8065d8271075efed07">
@@ -664,13 +664,13 @@ id="collection-5bc382cd0852293bddef90ab">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-fa091c4052ac428ce09a">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">Through my user testing I want to further flesh out two things:</p>
+                      <p>Through my user testing I want to further flesh out two things:</p>
                       <ul data-rte-list="default">
                         <li>
-                          <p style="white-space: pre-wrap;">User Personas - what is a typical seller/buyer looking for?</p>
+                          <p>User Personas - what is a typical seller/buyer looking for?</p>
                         </li>
                         <li>
-                          <p style="white-space: pre-wrap;">Platform Pain Points - what are some areas where the platform is hindering user activity rather than facilitating it?</p>
+                          <p>Platform Pain Points - what are some areas where the platform is hindering user activity rather than facilitating it?</p>
                         </li>
                       </ul>
                     </div>
