--- a/site/expo/index.html
+++ b/site/expo/index.html
@@ -830,10 +830,10 @@ id="collection-5b92ba83cd836647ddb0eb5c">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-ac9dd7cab81935d4519f">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">Over a summer I helped out a friend with a pop-up exhibition in Brooklyn. </p>
-                      <p style="white-space: pre-wrap;">I noticed that most people did not spend much time at our stall.&nbsp;Most people at the expo weren't there to buy something specific. They were simply there to browse.&nbsp;With everything arranged haphazardly, they found it frustrating
+                      <p>Over a summer I helped out a friend with a pop-up exhibition in Brooklyn. </p>
+                      <p>I noticed that most people did not spend much time at our stall.&nbsp;Most people at the expo weren't there to buy something specific. They were simply there to browse.&nbsp;With everything arranged haphazardly, they found it frustrating
                         to actually look for stuff and moved on.</p>
-                      <p style="white-space: pre-wrap;">Customers were finding it frustrating to look through our rack. The experience needed to be made more seamless so that they could be immediately finding clothes that would match their style.&nbsp;</p>
+                      <p>Customers were finding it frustrating to look through our rack. The experience needed to be made more seamless so that they could be immediately finding clothes that would match their style.&nbsp;</p>
                     </div>
                   </div>
                   <div class="sqs-block spacer-block sqs-block-spacer sized vsize-1" data-block-type="21" id="block-68fe7775e696e280856c">
@@ -845,24 +845,24 @@ id="collection-5b92ba83cd836647ddb0eb5c">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539573553719_38052">
                     <div class="sqs-block-content">
-                      <h3 style="white-space: pre-wrap;"><strong>Big Question: <em>Who</em> was at the expo?</strong></h3>
-                      <p style="white-space: pre-wrap;">I came up with three categories of people based on my observations and after talking to multiple people around the expo about why they were attending</p>
+                      <h3><strong>Big Question: <em>Who</em> was at the expo?</strong></h3>
+                      <p>I came up with three categories of people based on my observations and after talking to multiple people around the expo about why they were attending</p>
                     </div>
                   </div>
                   <div class="row sqs-row">
                     <div class="col sqs-col-4 span-4">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539573553719_13350">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;"><strong>Craft Enthusiasts </strong></p>
+                          <p><strong>Craft Enthusiasts </strong></p>
                           <ul data-rte-list="default">
                             <li>
-                              <p style="white-space: pre-wrap;">They typically have an appreciation for crafts.</p>
+                              <p>They typically have an appreciation for crafts.</p>
                             </li>
                             <li>
-                              <p style="white-space: pre-wrap;">They don't mind spending and may even pick up multiple items.</p>
+                              <p>They don't mind spending and may even pick up multiple items.</p>
                             </li>
                             <li>
-                              <p style="white-space: pre-wrap;">They spend a lot of time in the booth and will ask you about the work and the techniques used.</p>
+                              <p>They spend a lot of time in the booth and will ask you about the work and the techniques used.</p>
                             </li>
                           </ul>
                         </div>
@@ -871,35 +871,35 @@ id="collection-5b92ba83cd836647ddb0eb5c">
                     <div class="col sqs-col-4 span-4">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539573553719_24246">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;"><strong>Purposeful Shoppers </strong></p>
+                          <p><strong>Purposeful Shoppers </strong></p>
                           <ul data-rte-list="default">
                             <li>
-                              <p style="white-space: pre-wrap;">They have come to shop.</p>
+                              <p>They have come to shop.</p>
                             </li>
                             <li>
-                              <p style="white-space: pre-wrap;">They don't particularly differentiate between fresh and sale items. Just whatever "fits in the budget"</p>
+                              <p>They don't particularly differentiate between fresh and sale items. Just whatever "fits in the budget"</p>
                             </li>
                             <li>
-                              <p style="white-space: pre-wrap;">They spend some time browsing and engaging with the stuff in every booth that interests them.</p>
+                              <p>They spend some time browsing and engaging with the stuff in every booth that interests them.</p>
                             </li>
                           </ul>
-                          <p data-rte-preserve-empty="true" style="white-space: pre-wrap;"></p>
+                          <p data-rte-preserve-empty="true"></p>
                         </div>
                       </div>
                     </div>
                     <div class="col sqs-col-4 span-4">
                       <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539573553719_29897">
                         <div class="sqs-block-content">
-                          <p style="white-space: pre-wrap;"><strong>Sunday Strollers </strong></p>
+                          <p><strong>Sunday Strollers </strong></p>
                           <ul data-rte-list="default">
                             <li>
-                              <p style="white-space: pre-wrap;">They are just on an outing over the weekend. Thought it would be nice to "check the expo out"</p>
+                              <p>They are just on an outing over the weekend. Thought it would be nice to "check the expo out"</p>
                             </li>
                             <li>
-                              <p style="white-space: pre-wrap;">They aren't particularly looking to buy anything.. They <em>might</em> buy something if it's on sale.</p>
+                              <p>They aren't particularly looking to buy anything.. They <em>might</em> buy something if it's on sale.</p>
                             </li>
                             <li>
-                              <p style="white-space: pre-wrap;">They don't spend much time in the booths.</p>
+                              <p>They don't spend much time in the booths.</p>
                             </li>
                           </ul>
                         </div>
@@ -915,8 +915,8 @@ id="collection-5b92ba83cd836647ddb0eb5c">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1536375010388_472301">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;"><strong>REARRANGE BY COLOR</strong></p>
-                      <p style="white-space: pre-wrap;">My first idea was to rearrange the collection by color. The bright contrasts would definitely catch people's eye, especially that of our <em>Shoppers</em> and <em>Sunday Strollers</em>,&nbsp;but I still had to point out where everything
+                      <p><strong>REARRANGE BY COLOR</strong></p>
+                      <p>My first idea was to rearrange the collection by color. The bright contrasts would definitely catch people's eye, especially that of our <em>Shoppers</em> and <em>Sunday Strollers</em>,&nbsp;but I still had to point out where everything
                         was and they would quickly loose interest while browsing the rack due to frustration. That defeated the purpose.</p>
                     </div>
                   </div>
@@ -990,8 +990,8 @@ id="collection-5b92ba83cd836647ddb0eb5c">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539573553719_57176">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;"><strong>REARRANGE BY ITEM TYPE</strong></p>
-                      <p style="white-space: pre-wrap;">Then I tried to arrange things by item. Separating all the pants from the shirts and jumpsuits and arranging them on the basis of a uniform color scheme. This however was a drawback for those looking to buy items on sale.&nbsp;Most
+                      <p><strong>REARRANGE BY ITEM TYPE</strong></p>
+                      <p>Then I tried to arrange things by item. Separating all the pants from the shirts and jumpsuits and arranging them on the basis of a uniform color scheme. This however was a drawback for those looking to buy items on sale.&nbsp;Most
                         people would form a mental opinion of the price range of the entire rack by looking at the first item and therefore didn't find the pieces that were relatively discounted unless told. Again, defeated the purpose.</p>
                     </div>
                   </div>
@@ -1073,8 +1073,8 @@ id="collection-5b92ba83cd836647ddb0eb5c">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-757b3c246c712b2de8c2">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;"><strong>ARRANGE BY ITEM/PRICE ALONG COLOR</strong></p>
-                      <p style="white-space: pre-wrap;">Finally,&nbsp;I arranged things by item/set. First I separated the sale items from the new collection and put a scarf to clearly demarcate the two halves. Then I organized each half according to style while also following a color
+                      <p><strong>ARRANGE BY ITEM/PRICE ALONG COLOR</strong></p>
+                      <p>Finally,&nbsp;I arranged things by item/set. First I separated the sale items from the new collection and put a scarf to clearly demarcate the two halves. Then I organized each half according to style while also following a color
                         pattern,&nbsp;</p>
                     </div>
                   </div>
@@ -1153,13 +1153,13 @@ id="collection-5b92ba83cd836647ddb0eb5c">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-f6a3a40d1e07b524876e">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">After implemented the new arrangement, at the expo, I saw a noticeable increase in customer traffic. By the end of the first day we managed to break even with the price of participation and by the end of the two days had made nearly
+                      <p>After implemented the new arrangement, at the expo, I saw a noticeable increase in customer traffic. By the end of the first day we managed to break even with the price of participation and by the end of the two days had made nearly
                         1200 dollars!&nbsp;</p>
-                      <p style="white-space: pre-wrap;">This project helped me truly understand how important the user it to any service! Understanding how the user thinks and what motivates them to behave is crucial to understanding the direction design should take. Arranging by item/price
+                      <p>This project helped me truly understand how important the user it to any service! Understanding how the user thinks and what motivates them to behave is crucial to understanding the direction design should take. Arranging by item/price
                         may have helped in here but maybe in a bigger, more well known store it would be more beneficial to arrange by size. I noticed this first hand when I helped handle a sale for a prominent designer in India. During sale hours the
                         whole shop would become a big mess and everyone including the shop-keepers would end up frustrated. The best way to deal with this was to arrange by size and simply point the customer in the direct of their rack. Even now when
                         you browse a large clothing website, the first thing that people filter in the sale section is their size.</p>
-                      <p style="white-space: pre-wrap;">It’s <strong>not the how</strong> you’re arranging things, <strong>but the <em>who</em></strong> you are doing it for<strong> that matters</strong> more.</p>
+                      <p>It’s <strong>not the how</strong> you’re arranging things, <strong>but the <em>who</em></strong> you are doing it for<strong> that matters</strong> more.</p>
                     </div>
                   </div>
                   <div class="sqs-block spacer-block sqs-block-spacer sized vsize-1" data-block-type="21" id="block-yui_3_17_2_1_1539573553719_197115">
@@ -1172,9 +1172,9 @@ id="collection-5b92ba83cd836647ddb0eb5c">
                   </div>
                   <div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-yui_3_17_2_1_1539573553719_197181">
                     <div class="sqs-block-content">
-                      <p style="white-space: pre-wrap;">The lessons learnt from this experience can be easily mapped onto the world of Web/Mobile design for E-Retail sites. One of the biggest reasons why online shopping has become so popular is because it is much easier for the customer
+                      <p>The lessons learnt from this experience can be easily mapped onto the world of Web/Mobile design for E-Retail sites. One of the biggest reasons why online shopping has become so popular is because it is much easier for the customer
                         to find exactly what they are looking for with the click of a few ‘filter’ buttons! </p>
-                      <p style="white-space: pre-wrap;">An item’s<strong> relative position</strong> also makes a difference! In a study, when the $100 toaster was placed next to $40 toasters, no one bought it, but when it was placed next to $800 toasters, demand went up! </p>
+                      <p>An item’s<strong> relative position</strong> also makes a difference! In a study, when the $100 toaster was placed next to $40 toasters, no one bought it, but when it was placed next to $800 toasters, demand went up! </p>
                     </div>
                   </div>
                   <div class="row sqs-row">
